Bug 859706 - Backport |Bug 796882 - Implement CSS charset handling according to CSS3 Syntax| to b2g18. r=bz, a=lsblakk